[package]
name = "vulkano-examples"
version = "0.1.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]

[dependencies]
vulkano = "0.9"
vulkano-shader-derive = "0.9"
vulkano-win = "0.9"
cgmath = "0.16"
gltf = "0.10"
gltf-importer = "0.10"
image = "0.18"
winit = "0.11"
time = "0.1"

[[bin]]
name = "gltf"
path = "gltf/main.rs"

[[bin]]
name = "deferred"
path = "deferred/main.rs"

[[bin]]
name = "triangle"
path = "triangle/main.rs"
